datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

generator client {
  provider = "prisma-client-js"
}

generator dbml {
  provider = "prisma-dbml-generator"
  output   = "../../generated/schema.dbml"
}

enum Role {
  ADMIN
  BUYER
  SELLER
}

model User {
  id            Int            @id @default(autoincrement())
  createdAt     DateTime       @default(now())
  updatedAt     DateTime       @updatedAt
  email         String         @unique
  password      String
  firstName     String?
  lastName      String?
  roles         Role[]
  posts         Post[]
  refreshTokens RefreshToken[]
}

model Post {
  id        String   @id @default(cuid())
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  published Boolean  @default(false)
  title     String
  content   String?
  author    User?    @relation(fields: [authorId], references: [id])
  authorId  Int?
}

model RefreshToken {
  id         String   @id @default(cuid())
  expiryDate DateTime
  user       User     @relation(fields: [userId], references: [id])
  userId     Int
}
