//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  email String [unique, not null]
  password String [not null]
  firstName String
  lastName String
  roles Role
  posts Post
  refreshTokens RefreshToken
}

Table Post {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  published Boolean [not null, default: false]
  title String [not null]
  content String
  author User
  authorId Int
}

Table RefreshToken {
  id String [pk]
  expiryDate DateTime [not null]
  user User [not null]
  userId Int [not null]
}

Enum Role {
  ADMIN
  BUYER
  SELLER
}

Ref: Post.authorId > User.id

Ref: RefreshToken.userId > User.id